--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-nltk==3.4.5
-pandas==0.25.0
-dash==1.3.0
-vaderSentiment==3.2.1
-requests
+nltk>=3.4.5
+pandas>=0.25.0
+dash>=1.3.0
+vaderSentiment>=3.2.1
+requests>=2.22.0
